src/main/default/objects/MultiReport_Export_Template__c/MultiReport_Export_Template__c.object-meta.xml
<CustomObject>
    <description>Template for creating a multiple-report export with each report on its own sheet in the .xlsx file</description>
    <label>MultiReport Export Template</label>
    <nameField>
        <label>MultiReportExport Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MultiReport Export Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>