src/main/default/objects/MultiReport_Export_Template__c/fields/Add_Column_Filter__c.field-meta.xml
<CustomField>
    <fullName>Add_Column_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds Filter menu to every column header</description>
    <inlineHelpText>Adds Filter menu to every column header</inlineHelpText>
    <label>Add Column Filter</label>
    <type>Checkbox</type>
</CustomField>