src/main/default/objects/MultiReport_Export_Template__c/fields/Auto_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically Send the Exported file via email to the specified Recipients using the specified Email Template</description>
    <inlineHelpText>Automatically Send the Exported file via email to the specified Recipients using the specified Email Template</inlineHelpText>
    <label>Auto Send Email</label>
    <type>Checkbox</type>
</CustomField>