src/main/default/objects/MultiReport_Export_Template__c/fields/Boolean_False_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_False_Value__c</fullName>
    <description>The value to display when a Boolean (Checkbox ) field is False</description>
    <inlineHelpText>The value to display when a Boolean (Checkbox ) field is False</inlineHelpText>
    <label>Boolean False Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>