src/main/default/objects/MultiReport_Export_Template__c/fields/Boolean_True_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_True_Value__c</fullName>
    <description>The value to display when a Boolean (Checkbox ) field is True</description>
    <inlineHelpText>The value to display when a Boolean (Checkbox ) field is True</inlineHelpText>
    <label>Boolean True Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>