src/main/default/objects/MultiReport_Export_Template__c/fields/Date_Format_String__c.field-meta.xml
<CustomField>
    <fullName>Date_Format_String__c</fullName>
    <description>The Java SimpleDateFormat string used for Date formatting</description>
    <inlineHelpText>The Java SimpleDateFormat string used for Date formatting</inlineHelpText>
    <label>Date Format String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>