src/main/default/objects/MultiReport_Export_Template__c/fields/DateTime_Format_String__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Format_String__c</fullName>
    <description>The Java SimpleDateFormat string used for DateTime formatting</description>
    <inlineHelpText>The Java SimpleDateFormat string used for DateTime formatting</inlineHelpText>
    <label>DateTime Format String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>