src/main/default/objects/MultiReport_Export_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Export function</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>