src/main/default/objects/MultiReport_Export_Template__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <description>A comma separated list on recipient email addresses</description>
    <inlineHelpText>A comma separated list on recipient email addresses</inlineHelpText>
    <label>Email Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>