src/main/default/objects/MultiReport_Export_Template__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>