src/main/default/objects/MultiReport_Export_Template__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>Name of the Email template used to send the Export</description>
    <inlineHelpText>Name of the Email template used to send the Export</inlineHelpText>
    <label>Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>