src/main/default/objects/MultiReport_Export_Template__c/fields/Export_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Export_File_Name__c</fullName>
    <description>The name of the file that will be exported</description>
    <label>Export File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>