src/main/default/objects/MultiReport_Export_Template__c/validationRules/Recipient_Required_For_Email_Sending.validationRule-meta.xml
<ValidationRule>
    <fullName>Recipient_Required_For_Email_Sending</fullName>
    <active>true</active>
    <description>The Email Recipients is required if Auto Send Email is enabled</description>
    <errorConditionFormula>AND(ISBLANK( Email_Recipients__c ),  Auto_Send_Email__c  = true )</errorConditionFormula>
    <errorDisplayField>Email_Recipients__c</errorDisplayField>
    <errorMessage>You must add email recipients to enable Auto Send Email functionality</errorMessage>
</ValidationRule>